--- a/src/app/search-select-px/search-select-px.component.html
+++ b/src/app/search-select-px/search-select-px.component.html
@@ -14,7 +14,7 @@
             </ng-template>
         </ng-select>
     </div>
-    <div class="buttonNew">
+    <div class="buttonNewPx">
         <button type="button" (click)="agregarPaciente()">+</button>
     </div>
 </div>
