--- a/src/app/app-pacientes/app-pacientes.component.html
+++ b/src/app/app-pacientes/app-pacientes.component.html
@@ -17,7 +17,7 @@
     </thead>
     <tbody>
         <ng-container *ngFor="let paciente of pacientes">
-            <tr>
+            <tr class="trData">
                 <td>{{paciente.apellido}} {{paciente.nombre}}</td>
                 <td>{{paciente.dni}}</td>
                 <td>{{paciente.telefono}}</td>
